--- a/imageextractor/requirements.txt
+++ b/imageextractor/requirements.txt
@@ -10,6 +10,7 @@ kiwisolver==1.4.4
 matplotlib==3.6.2
 numpy==1.23.5
 opencv-python==4.6.0.66
+opencv-python-headless
 packaging==22.0
 Pillow==9.3.0
 pyparsing==3.0.9
