--- a/imageextractor/requirements.txt
+++ b/imageextractor/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.5.2
 contourpy==1.0.6
 cycler==0.11.0
 Django==4.1.4
+django-cors-headers==3.13.0
 djangorestframework==3.14.0
 fonttools==4.38.0
 gunicorn==20.1.0
